# nash

./: .env.example  .gitignore  Backtest.md  Commands.md  Makefile  README.md  pyproject.toml  pytest.ini
.cursor/rules/: backtest-rules.mdc  cloud-execution-rules.mdc  coding-rules.mdc
.github/workflows/: deploy_demo.yml  deploy_live.yml
app/: cli.py  main.py  trading_pipeline.py
app/analysis/: collect_position_analysis_data.py  collect_position_metrics.py  daily_loss_report.py  loss_analyzer.py  models.py  win_analyzer.py
app/api/: deps.py
app/backtesting/: account.py  backtest.py  config.py  executor.py  marketplace.py  models.py  portfolio.py  position.py  trading_pipeline.py  utils.py
app/coins/: __init__.py  fet.py  loader.py  render.py  tao.py
app/commands/: generate_params.py  open_positions.py  risk_flow.py  send_telegram.py
app/common/: rounding.py  utils.py
app/config/: __init__.py  backtest.py  constants.py  risk.py  settings.py  strategy.py  strategy_config.py  strategy_filter_config.py
app/core/: logger.py  logging.py  messages.py  rounding.py  types.py  utils.py
app/exchange/: __init__.py  account_service.py  client.py  config.py  utils.py  (+2 more)
artifacts/: backtest_baseline.json  backtest_symbol_baseline.json
commands/: generate_params.py  open_positions.py  risk_flow.py  send_telegram.py
deployments/: bot-live.service
docs/: backtest.md  balance-by-mode.md  commands.md  workflow.md
history_data/: FETUSDT_15m.csv  FETUSDT_1h.csv  FETUSDT_5m.csv  RENDERUSDT_1h.csv  TAOUSDT_15m.csv  TAOUSDT_1h.csv
tests/: TESTING.md  conftest.py
(+206 files in other folders)
