[tool.poetry]
name = "Nash"
version = "1.0.0"
description = "Crypto Trading Bot with FastAPI"
authors = ["Ho Thanh Son <hothson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=2.3.3"
numpy = ">=2.2.6"
requests = "^2.34.2"
openai = "^2.44.0"
fastapi = "^0.139.0"
uvicorn = "^0.50.0"
backtrader = "^1.9.78.123"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
