[project]
name = "nash"
version = "1.0.0"
description = "Crypto Trading Bot with FastAPI"
authors = [{ name = "Ho Thanh Son", email = "hothson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "requests>=2.34.2",
    "openai>=2.44.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
    "backtrader>=1.9.78.123",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
package = false
