[project]
name = "nash"
version = "1.0.0"
description = "Nash with FastAPI"
authors = [{ name = "Ho Thanh Son", email = "hothson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "requests>=2.34.2",
    "openai>=2.44.0",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.uv]
package = false
